Adding needed dependencies